--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -9,8 +9,8 @@
 
     <h2>Daftar Produk</h2>
     <ul>
-        {% for product in products %}
-            <li>
+        <!--{% for product in products %}-->
+            <!-- <li>
                 <img src="{{ product.thumbnail }}" width="100" alt="{{ product.name }}">
                 <strong>{{ product.name }}</strong> - Rp{{ product.price }}
                 <p>{{ product.description }}</p>
@@ -21,7 +21,7 @@
             </li>
         {% empty %}
             <p>Belum ada produk tersedia.</p>
-        {% endfor %}
+        {% endfor %} -->
     </ul>
 </body>
 </html>
