--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -7,8 +7,8 @@
     <h1>Selamat datang di {{ app_name }}</h1>
     <p>Dibuat oleh: {{ student_name }} - {{ student_class }}</p>
 
-    <h2>Daftar Produk</h2>
-    <ul>
+    <!-- <h2>Daftar Produk</h2>
+    <ul> -->
         <!--{% for product in products %}-->
             <!-- <li>
                 <img src="{{ product.thumbnail }}" width="100" alt="{{ product.name }}">
