--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -1,13 +1,25 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>{{ app_name }}</title>
-</head>
-<body>
-    <h1>Selamat datang di {{ app_name }}</h1>
-    <p>Dibuat oleh: {{ student_name }} - {{ student_class }}</p>
-
- 
-    </ul>
-</body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+<h1>Daftar Produk Toko Bola</h1>
+<a href="{% url 'main:create_product' %}">
+  <button>+ Tambah Produk</button>
+</a>
+<hr>
+{% if not products %}
+<p>Belum ada produk di toko bola.</p>
+{% else %}
+{% for product in products %}
+<div>
+  <h2><a href="{% url 'main:show_product' product.id %}">{{ product.name }}</a></h2>
+  <p>Harga: Rp {{ product.price }}</p>
+  <p>Stok: {{ product.stock }}</p>
+  {% if product.image_url %}
+  <img src="{{ product.image_url }}" alt="product image" width="150">
+  {% endif %}
+  <p>{{ product.description|truncatewords:20 }}...</p>
+  <p><a href="{% url 'main:show_product' product.id %}"><button>Detail</button></a></p>
+</div>
+<hr>
+{% endfor %}
+{% endif %}
+{% endblock %}
