--- a/main/templates/show_product.html
+++ b/main/templates/show_product.html
@@ -1,11 +1,22 @@
 {% extends 'base.html' %}
 {% block content %}
 <p><a href="{% url 'main:show_main' %}"><button>← Kembali ke Daftar Produk</button></a></p>
+
 <h1>{{ product.name }}</h1>
 <p>Harga: Rp {{ product.price }}</p>
 <p>Stok: {{ product.stock }}</p>
+
 {% if product.image_url %}
 <img src="{{ product.image_url }}" alt="product image" width="300">
 {% endif %}
+
 <p>{{ product.description }}</p>
+
+<!-- Tambahkan kode ini -->
+{% if product.user %}
+    <p>Author: {{ product.user.username }}</p>
+{% else %}
+    <p>Author: Anonymous</p>
+{% endif %}
+
 {% endblock %}
