--- a/main/templates/create_product.html
+++ b/main/templates/create_product.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block meta %}
-<title>Add Product - Football Shop</title>
+<title>Add Product - ShopBall Lucid</title>
 {% endblock meta %}
 
 {% block content %}
