--- a/main/templates/show_product.html
+++ b/main/templates/show_product.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block meta %}
-<title>{{ product.name }} - Football Shop</title>
+<title>{{ product.name }} - ShopBall Lucid</title>
 {% endblock meta %}
 
 {% block content %}
