--- a/main/templates/edit_product.html
+++ b/main/templates/edit_product.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block meta %}
-<title>Edit Product - Football Shop</title>
+<title>Edit Product - ShopBall Lucid</title>
 {% endblock meta %}
 
 {% block content %}
