--- a/templates/base.html
+++ b/templates/base.html
@@ -2,14 +2,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
-    {% block meta %}{% endblock meta %}
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="{% static 'css/global.css' %}"/>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+  {% block meta %}{% endblock meta %}
+
+  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- DOMPurify (BARU) -->
+  <script src="https://cdn.jsdelivr.net/npm/dompurify@3.0.5/dist/purify.min.js"></script>
+
+  <link rel="stylesheet" href="{% static 'css/global.css' %}"/>
 </head>
-<body>
-    {% block content %}{% endblock content %}
+<body class="min-h-screen">
+  {% block content %}{% endblock content %}
+
+  {% include 'toast.html' %}
+  {% include 'modal_product.html' %}
+
+  <script src="{% static 'js/toast.js' %}"></script>
+  <script src="{% static 'js/products.js' %}"></script>
+  <script src="{% static 'js/auth.js' %}"></script>
 </body>
 </html>
